[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cachyport"
version = "0.1.0"
description = "Backport and manage CachyOS kernel packages on Arch Linux"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "CC-BY-NC-SA-4.0" }
authors = [{ name = "cachyport" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/SharkyRawr/cachyport"
Repository = "https://github.com/SharkyRawr/cachyport"

[project.scripts]
cachyport = "cachyport.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
