[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cachyport"
version = "0.1.1"
description = "Backport and manage CachyOS kernel packages on Arch Linux"
readme = "README.md"
requires-python = ">=3.14"
license = "CC-BY-NC-SA-4.0"
license-files = ["LICENSE"]
authors = [{ name = "cachyport" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/SharkyRawr/cachyport"
Repository = "https://github.com/SharkyRawr/cachyport"

[project.scripts]
cachyport = "cachyport.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
]
